# hs-bsdiff

./: .gitignore  .travis.yml  LICENSE.txt  README.md  bsdiff.cabal  bspatcher.hs
examples/: ex1.hs
src/Data/ByteString/: BSDiff.hs  BSDiff.hsc
src/cbits/: bsdiff.c  bspatch.c  bspatch.h  makefile  test.c
tests/: Properties.hs
