name:                bsdiff
version:             0.0
synopsis:            Haskell bindings to Bsdiff
description:
  @bsdiff@ is a tool for creating/applying patches to binary files.
  .
  These are the complete Haskell bindings. Based on bsdiff v4.3.
  .
  Please see the homepage for more information: <http://www.daemonology.net/bsdiff/>
homepage:            http://thoughtpolice.github.com/hs-bsdiff
bug-reports:         http://github.com/thoughtpolice/hs-bsdiff/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4,
                     GHC == 7.2.1, GHC == 7.2.2,
                     GHC == 7.4.1

extra-source-files:
  AUTHORS.txt
  README.md
  examples/*.hs
  tests/*.hs
  bench/*.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-bsdiff.git

library
  exposed-modules:
    Data.ByteString.BSDiff

  build-depends:
    base         >= 4,
    bytestring,
    filepath,
    -- We depend on bzlib even though we don't use it;
    -- this will either require a dependency on system bzlib,
    -- or will build a copy for windows and install bzlib.h
    -- as needed. No reason to duplicate that.
    bzlib

  hs-source-dirs: src
  include-dirs:   src/cbits

  c-sources:
    src/cbits/bsdiff.c
    src/cbits/bspatch.c

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    QuickCheck,
    hspec,
    bsdiff

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010

benchmark bench1
  hs-source-dirs: bench
  main-is:        Bench1.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    criterion,
    bsdiff

  ghc-options:      -Wall -fno-warn-orphans -threaded
  default-language: Haskell2010
