name:                bsdiff
version:             0.0
synopsis:            Haskell bindings to Bsdiff
description:
  @bsdiff@ is a tool for creating/applying patches to binary files.
  .
  These are the complete Haskell bindings. They're based on minibsdiff,
  which is a portable derivative of bsdiff v4.3. See
  <http://github.com/thoughtpolice/minibsdiff>
  .
  This package also includes a reimplementation of @bsdiff/bspatch@, called
  @bspatcher@, which demonstrates how to use the library and uses lz4
  compression as opposed to bzip (just for demonstration.)
  .
  Please see the bsdiff homepage for more information: <http://www.daemonology.net/bsdiff/>
homepage:            http://thoughtpolice.github.com/hs-bsdiff
bug-reports:         http://github.com/thoughtpolice/hs-bsdiff/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
stability:           Experimental
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4,
                     GHC == 7.2.1, GHC == 7.2.2,
                     GHC == 7.4.1

extra-source-files:
  AUTHORS.txt
  README.md
  examples/*.hs
  tests/*.hs
  bench/*.hs
  src/cbits/test.c

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-bsdiff.git

flag no-exe
  description: Disable compilation of bspatcher utility
  default: False

library
  exposed-modules:
    Data.ByteString.BSDiff

  build-depends:
    base         >= 4,
    bytestring,
    filepath

  hs-source-dirs: src
  include-dirs:   src/cbits

  c-sources:
    src/cbits/bsdiff.c
    src/cbits/bspatch.c

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP, ForeignFunctionInterface
  default-language:   Haskell2010

executable bspatcher
  main-is: bspatcher.hs

  build-depends:
    base >= 4,
    bytestring,
    bsdiff,
    lz4, zlib, bzlib, quicklz, snappy

  if flag(no-exe)
    buildable: False

  hs-source-dirs:   . src
  ghc-options:      -Wall -O2 -funbox-strict-fields
                    -fwarn-tabs
  default-language: Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    QuickCheck,
    quickcheck-instances,
    hspec,
    bsdiff

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010

benchmark bench1
  hs-source-dirs: bench
  main-is:        Bench1.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring,
    criterion,
    bsdiff

  ghc-options:      -Wall -fno-warn-orphans -threaded
  default-language: Haskell2010
